# rosetta-decode

./: .coveragerc-reconciliation  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: backend-builder.md  frontend-builder.md  fullstack-planner.md  orchestrator.md  tester.md
.claude/commands/: plan-feature.md  session-end.md  session-start.md
.claude/skills/backend-builder/: SKILL.md
.claude/skills/feature-planner/: SKILL.md
.claude/skills/frontend-builder/: SKILL.md
.claude/skills/frontend-shadcn-ui-specialist/: SKILL.md
.claude/skills/git-branch-setup/: SKILL.md
.claude/skills/git-committer/: SKILL.md
.claude/skills/git-pr-summary/: SKILL.md
.claude/skills/plan-feature/: SKILL.md
.claude/skills/session-end/: SKILL.md
.claude/skills/session-start/: SKILL.md
.claude/skills/test-runner/: SKILL.md
.github/agents/: Backend.md  Frontend.md  FullstackPlanner.md  Orchestrator.md  Planner.md  Tester.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_create_jobs_table.py  002_add_llm_model.py  003_add_error_detail_to_jobs.py  004_add_lineage_doc_columns.py  005_add_job_name.py  006_refresh_collation_version.py  007_add_migration_plan_generated_files.py  008_proposed_status_user_overrides.py  009_add_skip_llm_parent_trigger.py  010_add_job_versions.py  011_add_block_revisions.py  012_add_explain_sessions.py  013_explain_session_metadata.py  014_collapse_strategy_values.py  015_add_under_review_status.py
config/: tensorzero.toml
config/postgres/: 01-extensions.sql
docs/: architecture.md  coding-standards.md  features.md  mvp-scope.md  user-stories.md
docs/context/: migration-approaches.md  sas-patterns.md
docs/plans/: F-UI-postmvp.md  F-backend-postmvp.md  F1-ext-proc-sort-macro.md  F1-pipeline-generation.md  F2-agentic-workflow.md  F2-proc-sort.md  F3-proposed-status-plan-interaction.md  F4-confidence-refine-history.md  F5-tab-versions.md
docs/plans/archive/: F-UI-postmvp.md  F-UI.md  F0-phase1-scaffold.md  F2-agentic-workflow-improvements.md  F3-translate-everything.md
docs/plans/latest/: F19-agentic-refine-loop.md  F4-confidence-refine-history.md
journal/: BACKLOG.md  DECISIONS.md  SESSIONS.md
samples/: basic_etl.sas  basic_etl_ref.csv  employees_raw.csv  proc_sort_example.sas  proc_sort_expected.csv
samples/sas_project/: 05_risk_scoring_iml.sas
scripts/: check_npm_lockfile.sh
src/backend/: Dockerfile  entrypoint.sh  main.py
src/backend/api/: schemas.py
src/backend/api/routes/: explain.py  jobs.py  migrate.py
src/backend/core/: config.py  logging.py
src/backend/db/: models.py  session.py
src/executor/: Dockerfile  main.py  pyproject.toml  recon.py  runner.py
src/frontend/: .gitignore  Dockerfile  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
src/frontend/@/components/ui/: tabs.tsx
src/frontend/src/: App.tsx  index.css
src/frontend/src/api/: errors.ts  explain.ts  jobs.ts  migrate.ts  types.ts
src/frontend/src/components/: AppSidebar.tsx  FileTree.tsx  JobResult.tsx  LineageGraph.tsx  MonacoDiffViewer.tsx  MonacoEditor.tsx  RightSidebar.tsx  TabSaveBar.tsx  TiptapEditor.tsx  VersionHistoryRail.tsx
src/frontend/src/components/Explain/: ChatInput.tsx  ContextBanner.tsx  EmptyState.tsx  MarkdownRenderer.tsx  MessageList.tsx  MigrationCard.tsx  MigrationPanel.tsx  shared.tsx  utils.ts
src/frontend/src/components/JobDetail/: BlockPlanTable.tsx  BlockRefineDialog.tsx  BlockRevisionDrawer.tsx  ChangelogFeed.tsx  EditorTab.tsx  FileNodeCard.tsx  LineageDetailPanel.tsx  LineageTab.tsx  LogView.tsx  NoteDialog.tsx  OutputView.tsx  PipelineStepCard.tsx  PlanTab.tsx  ReconSummaryCard.tsx  ReportTab.tsx  StatusBadge.tsx  TrustReportTab.tsx  constants.ts  index.ts  registerSasLanguage.ts  utils.ts
src/frontend/src/components/ui/: button.tsx  checkbox.tsx  dialog.tsx  popover.tsx  progress.tsx  select.tsx  (+3 more)
src/frontend/src/config/: monacoConfig.ts
src/frontend/src/context/: UploadStateContext.tsx
src/frontend/src/lib/: lineage-merge.ts
src/frontend/src/pages/: DocsPage.tsx  EditorFullPage.tsx  ExplainPage.tsx  GlobalLineagePage.tsx  JobDetailPage.tsx  JobsPage.tsx  UploadPage.tsx
src/frontend/src/types/: tiptap-markdown.d.ts
src/worker/: Dockerfile  main.py
src/worker/compute/: base.py  factory.py  local.py
src/worker/core/: config.py
src/worker/engine/: block_executor.py  codegen.py  doc_generator.py  llm_client.py  macro_expander.py  models.py  parser.py  router.py  stub_generator.py
src/worker/engine/agents/: __init__.py  analysis.py  data_step.py  documentation.py  failure_interpreter.py  generic_proc.py  lineage_enricher.py  macro_resolver.py  migration_planner.py  plain_english.py  proc.py  shared_context.py
src/worker/engine/chatbot/: __init__.py  explain_agent.py
src/worker/validation/: reconciliation.py
tests/: test_analysis_agent.py  test_api_routes.py  test_api_smoke.py  test_block_refine_routes.py  test_changelog_trust_report.py  test_codegen.py  test_context_improvements.py  test_data_step_agent.py  test_doc_endpoint.py  test_doc_generator.py  test_execute_route.py  test_executor_recon.py  test_executor_runner.py  test_explain_agent.py  test_explain_routes.py  test_factory.py  test_failure_interpreter_agent.py  test_fallback_plan_endpoint.py  test_generic_proc_agent.py  test_job_attachments.py  test_job_context.py  test_job_versions.py  test_jobs_routes_comprehensive.py  test_lineage_endpoint.py  test_lineage_enricher_agent.py  test_llm_client.py  test_local_backend.py  test_macro_expander.py  test_macro_resolver_agent.py  test_migrate_route.py  test_migration_planner_agent.py  test_parser.py  test_parser_proc_types.py  test_plan_interaction_routes.py  test_proc_agent.py  test_refine_loop.py  test_remote_reconciliation.py  test_rereconciliation_routes.py  test_session.py  test_sources_endpoint.py  (+5 more)
tests/reconciliation/: __init__.py  test_agentic_pipeline.py  test_data_step.py  test_proc_sort.py  test_reconciliation_service.py
