[project]
name = "sas-migrator"
version = "0.1.0"
description = "Migrate legacy SAS code into Python/PySpark pipelines runnable locally or on Databricks."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Mattia Tonelli", email = "mattia.t@adc-consulting.com" }]
license = { text = "Proprietary" }

dependencies = [
    # Core
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13.7",

    # API
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",

    # Local execution backend
    "pandas>=2.2",
    "duckdb>=0.10",
    "pyarrow>=15.0",

    # SAS ingestion
    "pyreadstat>=1.2", # read .sas7bdat / .sas7bcat datasets
    "sqlparse>=0.4",   # for PROC SQL parsing
    "lark>=1.1",       # grammar-based SAS DATA step parser

    # Pipeline manifest + lineage
    "pyyaml>=6.0",
    "networkx>=3.2", # dependency graph + lineage
    "jinja2>=3.1",   # codegen templates

    # LLM (used by the engine itself, distinct from Claude Code)
    "anthropic>=0.25",
]

[project.optional-dependencies]
parsers = [
    # Add ANTLR grammar support if a hand-written grammar replaces lark
    "antlr4-python3-runtime>=4.13",
]

cloud = [
    # Databricks / Spark — only installed when CLOUD=true workflows are needed
    "pyspark>=3.5",
    "databricks-sdk>=0.24",
    "databricks-connect>=15.0",
]

dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "pytest-mock>=3.12",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML",
    "pre-commit>=3.7",
    "httpx>=0.27",       # FastAPI test client
]

[project.scripts]
sas-migrator = "sas_migrator.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sas_migrator"]

# ---------- Ruff ----------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",   # pycodestyle + pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # simplify
    "RUF", # ruff-specific
    "D",   # pydocstyle (docstrings required on public API)
]
ignore = [
    "D100",
    "D104", # allow missing module/package docstrings
    "D203",
    "D213", # conflicting docstring rules
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"] # tests don't need docstrings

# ---------- Mypy ----------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["pyreadstat.*", "sas_kernel.*", "lark.*", "antlr4.*"]
ignore_missing_imports = true

# ---------- Pytest ----------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src/sas_migrator",
    "--cov-report=term-missing",
]
markers = [
    "reconciliation: slow tests comparing SAS vs Python outputs",
    "cloud: tests requiring a Databricks workspace (CLOUD=true)",
    "integration: tests hitting a real backend (pyspark/duckdb)",
    "flaky: known-flaky tests, to be stabilized",
]

[tool.coverage.run]
branch = true
source = ["src/sas_migrator"]
omit = ["**/__init__.py", "**/cli.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 90
