[project]
name = "sas-migrator"
version = "0.1.0"
description = "Migrate legacy SAS code into Python/PySpark pipelines runnable locally or on Databricks."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Mattia Tonelli", email = "mattia.t@adc-consulting.com" }]
license = { text = "Proprietary" }

dependencies = [
    # Core
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13.7",
    # API
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9", # multipart/form-data file uploads
    # Database
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    # Local execution backend
    "pandas>=2.2",
    "pyarrow>=15.0",
    # SAS ingestion
    "pyreadstat>=1.2", # read .sas7bdat / .sas7bcat datasets
    "sqlparse>=0.4",   # for PROC SQL parsing
    "lark>=1.1",       # grammar-based SAS DATA step parser
    # Pipeline manifest + lineage
    "pyyaml>=6.0",
    "networkx>=3.2", # dependency graph + lineage
    "jinja2>=3.1",   # codegen templates
    # LLM (used by the engine itself, distinct from Claude Code)
    "anthropic>=0.25",
    "pydantic-ai[anthropic]>=0.0.36",
]

[project.optional-dependencies]
parsers = [
    # Add ANTLR grammar support if a hand-written grammar replaces lark
    "antlr4-python3-runtime>=4.13",
]

cloud = [
    # Local PySpark — works without a Databricks cluster
    "pyspark>=3.5",
    "databricks-sdk>=0.24",
]

databricks = [
    # databricks-connect hijacks SparkSession.builder and requires a remote cluster.
    # Only install this extra when targeting a real Databricks workspace (CLOUD=true + DBX creds).
    "databricks-connect>=15.0",
]

dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "pytest-mock>=3.12",
    "hypothesis>=6.100",
    "ruff==0.15.11",
    "mypy>=1.10",
    "types-PyYAML",
    "pandas-stubs>=2.0",
    "pre-commit>=3.7",
    "httpx>=0.27",          # FastAPI test client
    "pytest-asyncio>=0.23",
    "aiosqlite>=0.20",      # in-memory async SQLite for tests (no real Postgres needed)
]

# No CLI entry point in Phase 1 — access via FastAPI at /docs

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backend", "src/worker"]

# ---------- Ruff ----------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",   # pycodestyle + pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # simplify
    "RUF", # ruff-specific
    "D",   # pydocstyle (docstrings required on public API)
]
ignore = [
    "D100",
    "D104", # allow missing module/package docstrings
    "D203",
    "D213", # conflicting docstring rules
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"] # tests don't need docstrings
# FastAPI requires Depends() in function signatures — B008 is a false positive here
"src/backend/api/routes/*.py" = ["B008"]
# Agent prompt strings contain long natural-language lines that must not be wrapped
"src/worker/engine/agents/*.py" = ["E501"]

# ---------- Mypy ----------
[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "."
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# Third-party packages without stubs — added as src/ grows
module = ["networkx", "networkx.*", "jinja2", "jinja2.*", "pyreadstat"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# executor is a standalone microservice with its own module layout; exclude from root mypy
module = ["src.executor.*", "recon", "runner"]
ignore_errors = true

[[tool.mypy.overrides]]
# pyreadstat has no stubs; its read functions return Any — suppress only in this file.
module = ["src.worker.compute.local"]
warn_return_any = false

[[tool.mypy.overrides]]
# pydantic-ai Agent overloads don't support BaseModel output_type in strict mode;
# the runtime behaviour is correct — ignore errors only in this file.
module = ["src.worker.engine.llm_client"]
ignore_errors = true

[[tool.mypy.overrides]]
# pyspark stubs may or may not be present depending on the environment;
# suppress unused-ignore warnings so the type: ignore[import-not-found] comments
# are harmless when pyspark is installed locally.
module = ["src.worker.validation.reconciliation"]
warn_unused_ignores = false

[[tool.mypy.overrides]]
# router uses MANUAL_INGESTION/SKIP strategy values that may not be in the enum stub
module = ["src.worker.engine.router"]
ignore_errors = true

[[tool.mypy.overrides]]
# test_worker_main has pre-existing type issues from the broader test suite
module = ["tests.test_worker_main"]
ignore_errors = true

# ---------- Pytest ----------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["-ra", "-q", "--tb=short", "--strict-markers", "--strict-config"]
markers = [
    "reconciliation: slow tests comparing SAS vs Python outputs",
    "cloud: tests requiring a Databricks workspace (CLOUD=true)",
    "integration: tests hitting a real backend (pyspark/postgres)",
    "flaky: known-flaky tests, to be stabilized",
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["**/__init__.py", "**/cli.py"]
concurrency = ["thread", "greenlet"]

[tool.coverage.report]
show_missing = true
skip_covered = false
